feat: add rotas na docs
